@@ -9,6 +9,7 @@ Quite a lot of basic engine stuff was done before this changelog was created. So
    A common ancestor will probably be created later)
  - add unified path searching (by means of a PWD root property)
  - add group orders (assigning orders to all selected units at once)
+ - add unit selection in both game area AND roster
 
 18.11.2011:
  - add initial modularity to tanks. Tanks should be now more easy to modify.
